[gd_scene load_steps=17 format=3 uid="uid://oug8f651ujv3"]

[ext_resource type="Script" path="res://nfr/nfr.gd" id="1_asid1"]
[ext_resource type="FontFile" uid="uid://8hhosy45djqn" path="res://fonts/mago3.ttf" id="1_g4ygx"]
[ext_resource type="PackedScene" uid="uid://douk8lwguwlf1" path="res://nfr/nfr_stage.tscn" id="2_e48p4"]
[ext_resource type="FontFile" uid="uid://dgvxpoi0ohhb1" path="res://fonts/mago2.ttf" id="3_s7uwv"]
[ext_resource type="PackedScene" uid="uid://dpw5tr22f2x1l" path="res://pause_menu.tscn" id="4_7ukfb"]
[ext_resource type="PackedScene" uid="uid://cxnlnesppg801" path="res://player.tscn" id="4_8jr0t"]

[sub_resource type="LabelSettings" id="LabelSettings_2tqab"]
resource_local_to_scene = true
line_spacing = -16.0
font = ExtResource("1_g4ygx")
font_size = 128
font_color = Color(0.366137, 0.668859, 0.63062, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vre12"]
font = ExtResource("1_g4ygx")
font_size = 48
font_color = Color(0.881424, 0.964539, 0.994609, 1)

[sub_resource type="LabelSettings" id="LabelSettings_oc5jp"]
font = ExtResource("3_s7uwv")
font_size = 40
font_color = Color(0.964701, 0.751331, 0.517319, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8s061"]
font = ExtResource("3_s7uwv")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_f46m7"]
line_spacing = -8.0
font = ExtResource("3_s7uwv")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_ece30"]
font = ExtResource("1_g4ygx")
font_size = 40
font_color = Color(0.964701, 0.751331, 0.517319, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_5kud1"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0clu5"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_fky4w"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_abnee"]

[node name="NFR" type="Node2D"]
script = ExtResource("1_asid1")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="BG" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.196434, 0.402359, 0.323805, 1)
metadata/_edit_lock_ = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="StageName" type="Label" parent="GUI"]
offset_left = 40.0
offset_top = 448.0
offset_right = 872.0
offset_bottom = 655.0
text = "NON-FUNCTIONAL REQUIREMENTS"
label_settings = SubResource("LabelSettings_2tqab")
autowrap_mode = 3

[node name="Instructions" type="Label" parent="GUI"]
offset_left = 40.0
offset_top = 640.0
offset_right = 679.0
offset_bottom = 678.0
text = "MAKE SURE TO RESPOND UNDER 1 SECOND"
label_settings = SubResource("LabelSettings_vre12")

[node name="SubInstructions" type="Label" parent="GUI"]
offset_left = 832.0
offset_top = 472.0
offset_right = 1208.0
offset_bottom = 679.0
text = "WHEN THE TIMER STARTS, TYPE THE LETTERS IN SEQUENCE ON THE LANE
"
label_settings = SubResource("LabelSettings_oc5jp")
autowrap_mode = 3

[node name="Enter" type="Label" parent="GUI"]
offset_left = 176.0
offset_top = 24.0
offset_right = 272.0
offset_bottom = 53.0
text = "ENTER
"
label_settings = SubResource("LabelSettings_8s061")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Triangle" type="Polygon2D" parent="GUI/Enter"]
position = Vector2(48, 33)
rotation = -1.5708
scale = Vector2(1.03059, 1.85852)
polygon = PackedVector2Array(4, -3, 0, 0, 4, 3)

[node name="Hint" type="Node2D" parent="GUI"]
visible = false
position = Vector2(1151, 64)

[node name="StartTyping" type="Label" parent="GUI/Hint"]
offset_left = 28.0
offset_top = -59.0
offset_right = 111.0
offset_bottom = 9.0
text = "START"
label_settings = SubResource("LabelSettings_f46m7")
vertical_alignment = 2

[node name="Triangle" type="Polygon2D" parent="GUI/Hint"]
position = Vector2(18, 0)
scale = Vector2(1.03059, 1.85852)
polygon = PackedVector2Array(4, -3, 0, 0, 4, 3)

[node name="Line" type="Line2D" parent="GUI/Hint"]
position = Vector2(1, 1)
points = PackedVector2Array(0, -1, 18, -1)
width = 1.0

[node name="ClearLabel" type="Label" parent="GUI"]
visible = false
offset_left = 832.0
offset_top = 472.0
offset_right = 1208.0
offset_bottom = 633.0
text = "THAT WAS IMPOSSIBLE!

WE CAN'T PASS THIS NFR.

TIME TO GO NEGOTIATE WITH THE STAKEHOLDERS!"
label_settings = SubResource("LabelSettings_ece30")
autowrap_mode = 3

[node name="PauseMenu" parent="GUI" instance=ExtResource("4_7ukfb")]
visible = false

[node name="Stages" type="Node2D" parent="."]

[node name="NFRStage1" parent="Stages" instance=ExtResource("2_e48p4")]
position = Vector2(192, 64)

[node name="NFRStage2" parent="Stages" instance=ExtResource("2_e48p4")]
position = Vector2(192, 160)

[node name="NFRStage3" parent="Stages" instance=ExtResource("2_e48p4")]
position = Vector2(192, 256)

[node name="NFRStage4" parent="Stages" instance=ExtResource("2_e48p4")]
position = Vector2(192, 352)

[node name="Player" parent="." instance=ExtResource("4_8jr0t")]
position = Vector2(-103, 96)

[node name="PlayerArea" type="StaticBody2D" parent="."]
collision_mask = 4

[node name="R" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2(283, 228)
shape = SubResource("WorldBoundaryShape2D_5kud1")

[node name="L" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2(0, 228)
shape = SubResource("WorldBoundaryShape2D_0clu5")

[node name="T" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2(156, 0)
shape = SubResource("WorldBoundaryShape2D_fky4w")

[node name="B" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2(156, 447)
shape = SubResource("WorldBoundaryShape2D_abnee")

[node name="Markers" type="Node2D" parent="."]

[node name="PlayerStart" type="Marker2D" parent="Markers"]
position = Vector2(-103, 96)

[node name="PlayerStop" type="Marker2D" parent="Markers"]
position = Vector2(72, 96)

[node name="Stages" type="Node2D" parent="Markers"]

[node name="Stage1" type="Marker2D" parent="Markers/Stages"]
position = Vector2(192, 64)

[node name="Stage2" type="Marker2D" parent="Markers/Stages"]
position = Vector2(192, 160)

[node name="Stage3" type="Marker2D" parent="Markers/Stages"]
position = Vector2(192, 256)

[node name="Stage4" type="Marker2D" parent="Markers/Stages"]
position = Vector2(192, 352)
